--- a/style.css
+++ b/style.css
@@ -72,6 +72,10 @@ background-color: orange;
 color: white;
 font-weight: 800;
 font-size: 14px;
+transition: 0.5s;
+}
+.btn-primary:hover{
+background-color: orchid;
 }
 .menu{
 font-size: 24px;
@@ -100,6 +104,10 @@ padding: 10px 10px;
 border-radius: 12px;
 border: none;
 margin-top: 24px;
+transition: 0.5s;
+}
+.banner-button:hover{
+background-color: magenta;
 }
 .Empowering{
 color: orange;
