--- a/style.css
+++ b/style.css
@@ -150,7 +150,8 @@ margin: 0 auto;
 }
 .cards{
 display: flex;
-justify-content: space-between;
+justify-content: center;
+gap: 70px;
 }
 .curriculum-title{
 text-align: center;
@@ -158,7 +159,7 @@ margin-top: 60px;
 margin-bottom: 60px;
 }
 .card{
-width: 367.8px;
+width: 268.8px;
 box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 justify-items: center;
 padding: 40px;
